--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -14,7 +14,7 @@
     <% @products.each do |product| %>
     <tr>
       <th><%= product.name %></th>
-      <th><%= product.image %></th>
+      <th><%= image_tag product.image, width: '100px' if product.image? %></th>
       <th><%= product.price %></th>
       <th><%= link_to 'Edit Detail', edit_admin_product_path(product) %></th>
       <th><%= link_to '', admin_product_path(product), method: :delete, data:{confirm: "Are you sure?"}, class: "glyphicon glyphicon-trash" %></th>
