--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "nav" %>
+
 <h1>產品後台</h1>
 <%= link_to 'Add New Product', new_admin_product_path, class: "btn btn-primary" %>
 <table class="table table-striped table-condensed table-bordered" >
