--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,40 @@
-<h1>瀏覽商品</h1>
+<div class="container">
+
+  <div class="row">
+
+    <div class="productItems col-md-10 clearfix">
+     <% @products.each do |product| %> 
+
+      <div class="item" style="float: left; width: 19%; height: 200px" >
+         
+        <div class="productPic">
+          <%= image_tag product.image, height: '50px' if product.image? %>
+        </div>
+
+        <div class="product Info" style="height: 100px">
+          <%= product.name %>
+          <br>
+          <%= product.description.first(30) %>
+          <br>
+          <%= product.price %>            
+        </div>
+
+        <div class="addButton" style="height: 30px">
+          <%= link_to 'Add to Cart', class: "btn btn-default " %>
+        </div>
+
+      </div>
+      <% end %>
+    </div>  
+    
+
+    <div class="cart col-md-2">
+      <h1>cart</h1>
+          
+    </div>
+    <div>
+      <%= paginate @products %>
+    </div>  
+  </div>
+  
+</div>
