--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,5 +1,6 @@
-.productItems{
+.product-list{
   border-right-style: solid;
+  width: calc( 100% - 280px);
   
 }
 
@@ -13,4 +14,9 @@ a {
 
 .item{
   margin: 0 auto;
+}
+
+.cart{
+  width: 250px;
+  float: right;
 }
