--- a/app/views/shared/_cart.html.erb
+++ b/app/views/shared/_cart.html.erb
@@ -2,17 +2,26 @@
       <h1>cart</h1>
       <hr>
       <% current_cart.cart_items.each do |item| %>
-      <div>
-        <%= image_tag item.product.image, :style => "width: 100px" %>
+      <div class="cart-item">
+        <div class="cart-img">
+        <%= image_tag item.product.image %>
+        </div>
         <div class="cart-item-info">
-          <h3><%= item.product.name %></h3>
-          $ <%= item.product.price %> <br>
-          <%= item.quantity %>
+          <h5><%= item.product.name %></h5>
+          單價: $ <%= item.product.price %> <br>
+          數量: <%= item.quantity %>
         </div>
       </div>
       <% end %>
       <hr> 
-      <div>SUBTOTAL </div>
+      <div>SUBTOTAL 
+        <% b = 0 %>
+        <% current_cart.cart_items.each do |item| %>
+          <% a = item.product.price * item.quantity %> 
+          <% b += a %>  
+        <% end %>
+        <h5>$ <%= b %></h5>
+      </div>
       <br>
       <div class="btn btn-default" >
         <%= link_to 'View Cart' %>
