--- a/app/views/shared/_cart.html.erb
+++ b/app/views/shared/_cart.html.erb
@@ -9,7 +9,8 @@
         <div class="cart-item-info">
           <h5><%= item.product.name %></h5>
           單價: $ <%= item.product.price %> <br>
-          數量: <%= item.quantity %>
+          數量: <%= item.quantity %> 
+          <%= button_to '+', add_to_cart_quantity_product_path(item.product), :method => :patch %>        
         </div>
       </div>
       <% end %>
