--- a/app/views/shared/_cart.html.erb
+++ b/app/views/shared/_cart.html.erb
@@ -9,8 +9,9 @@
         <div class="cart-item-info">
           <h5><%= item.product.name %></h5>
           單價: $ <%= item.product.price %> <br>
+          <%= button_to '+', add_to_cart_quantity_product_path(item.product), :method => :patch %>
           數量: <%= item.quantity %> 
-          <%= button_to '+', add_to_cart_quantity_product_path(item.product), :method => :patch %>        
+          <%= button_to '-', sub_to_cart_quantity_product_path(item.product), :method => :patch %>        
         </div>
       </div>
       <% end %>
