--- a/app/views/shared/_cart.html.erb
+++ b/app/views/shared/_cart.html.erb
@@ -1,29 +1,14 @@
     <div class="cart">
       <h1>cart</h1>
       <hr>
-      <% current_cart.cart_items.each do |item| %>
-      <div class="cart-item">
-        <div class="cart-img">
-        <%= image_tag item.product.image %>
-        </div>
-        <div class="cart-item-info">
-          <h5><%= item.product.name %></h5>
-          單價: $ <%= item.product.price %> <br>
-          <%= link_to '+', add_to_cart_quantity_product_path(item.product), :method => :post %>
-          數量: <%= item.quantity %> 
-          <%= link_to '-', sub_to_cart_quantity_product_path(item.product), :method => :patch %>    
-          <%= link_to '', remove_item_product_path(item.product), method: :delete, class: "glyphicon glyphicon-trash" %>    
-        </div>
+      <div class="item-list">
+        <% current_cart.cart_items.each do |item| %>
+        <%= render partial: "shared/item", locals: {item: item} %>
+        <% end %>
       </div>
-      <% end %>
       <hr> 
       <div>SUBTOTAL 
-        <% b = 0 %>
-        <% current_cart.cart_items.each do |item| %>
-          <% a = item.product.price * item.quantity %> 
-          <% b += a %>  
-        <% end %>
-        <h5>$ <%= b %></h5>
+        <h5 class="amount">$ <%= current_cart.cart_add_all %></h5>
       </div>
       <br>
       <div class="btn btn-default" >
