--- a/app/views/products/sub_to_cart_quantity.js.erb
+++ b/app/views/products/sub_to_cart_quantity.js.erb
@@ -1,4 +1,8 @@
 <% item = current_cart.find_item_by(@product) %>;
-
-$('.cart-<%= item.product.id %>-qty').text('數量: <%= item.quantity %>');
-$('.amount').text('$ <%= current_cart.cart_add_all %>');
+ <% if item.nil?  %>
+  $('.cart-<%= @product.id %>-item').remove();
+  $('.amount').text('$ <%= current_cart.cart_add_all %>');
+ <% else %>
+  $('.cart-<%= item.product.id %>-qty').text('數量: <%= item.quantity %>');
+  $('.amount').text('$ <%= current_cart.cart_add_all %>');
+<% end %>  
