view_cart action and cart_show view

--- a/app/views/shared/_cart.html.erb
+++ b/app/views/shared/_cart.html.erb
@@ -12,6 +12,6 @@
       </div>
       <br>
       <div class="btn btn-default" >
-        <%= link_to 'View Cart' %>
+        <%= link_to 'View Cart', cart_path(current_cart),method: :get %>
       </div>    
     </div>
