add form for new order on cart list page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -48,3 +48,17 @@ a {
 .cart-item-info .button_to{
   display: inline-block;
 }
+
+.form-control {
+    display: inline-block;
+    width: 20%;
+}
+
+.form-group{
+  padding: 15px;
+}    
+
+.order-submit{
+  margin: 0px 0px 15px 15px;
+}
+
