user can checkout cart list after login

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -35,8 +35,8 @@
             </tr>
           </tbody>  
         </table>
-      
     </div>
+    <%= render partial: "shared/form_error", locals: {object: @order} %>
     <div class="cart-shipping-info-form panel panel-default">
       <div class="panel-heading">Shopping Infomation</div>
 
