--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,3 +1,3 @@
-<%= render partial: "error" %>
+<%= render partial: "shared/form_error", locals: {object: @product} %>
 <h1>Add New Product</h1>
 <%= render partial: "form" %>
