--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -62,3 +62,32 @@ a {
   margin: 0px 0px 15px 15px;
 }
 
+/* order */
+.panel-order {
+  padding: 0;
+}
+
+.panel-order h2 {
+  background: #eee;
+  margin: 0;
+  padding: 5px 15px;
+}
+
+.order-content {
+  display: flex;
+}
+
+.order-data {
+  padding: 10px;
+  margin: 5px 15px;
+}
+
+.order-list {
+  width: 50vw;
+}
+
+
+.left-section {
+  border-right: 1px solid #999;
+}
+
