customer can cancel the order which has not been delivered.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <ul class="nav navbar-nav navbar-right">
             <a class="btn btn-default" href="http://localhost:3000/admin" role="button">Admin</a>
             <a class="btn btn-default" href="#" role="button">Cart</a>
-            <a class="btn btn-default" href="#" role="button">Order</a>
+            <a class="btn btn-default" href="http://localhost:3000/orders" role="button">Order</a>
             <a class="btn btn-default" href="#" role="button">Log in</a>
           </ul>
         </div><!-- /.navbar-collapse -->
