--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -26,7 +26,9 @@
         <p>Shipping Status: <%= order.shipping_status %> </p>
 
         <% if order.payment_status == "not_paid" %>
-          <%= link_to "Pay now", checkout_spgateway_order_path(order), method: :post, class: "btn btn-primary" %>
+          <% Payment::PAYMENT_METHODS.each do |method| %>
+            <%= link_to method, checkout_spgateway_order_path(order, payment_method: method), method: :post, class: "btn btn-primary" %>
+          <% end %>
         <% end %>
 
         <% if order.shipping_status == "not_shipped" %>
